# rules_mayhem

./: .bazelrc  .gitattributes  .gitignore  .travis.yml  BUILD  LICENSE  MODULE.bazel  Mayhemfile  README.md  WORKSPACE  WORKSPACE.bzlmod  bazel-rules_mayhem
.bcr/: metadata.template.json  presubmit.yml  source.template.json
.github/workflows/: bazel_test.yml  publish.yaml  small-linux-test.yaml  small-win-test.yaml
examples/: BUILD  mayhemit.c
mayhem/: BUILD  extensions.bzl  mayhem.bzl  mayhem_validation.bzl  mayhem_validator.sh.template  repositories.bzl  toolchains.bzl
mayhemfile/: BUILD  mayhemfile.bzl  mytarget.mayhemfile
pkg/: Mayhemfile
tests/: BUILD  mayhem_validator.sh  mayhemfile_validator.sh
